--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,9 +3,9 @@
 body {
   -webkit-font-smoothing: antialiased;
 
-  --bg: #333333;
-  --textNormal: rgba(255, 255, 255, 0.88);
-  --textTitle: white;
+  --bg: #222222;
+  --textNormal: rgba(255, 255, 255, 1);
+  --textTitle: rgba(255, 255, 255, 1);
   --textLink: #ff4aaf;
   --textLinkHover: #e5429d;
   --hr: hsla(0, 0%, 100%, 0.2);
